<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addserver_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wifiAlertMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/wifiAlertMsg"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/addserver_namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addserver_entername" />

    <EditText
        android:id="@+id/addserver_nameentry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/addserver_addressabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addserver_enteraddress" />

    <EditText
        android:id="@+id/addserver_addressentry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri" >

    </EditText>

    <CheckBox
        android:id="@+id/addserver_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/addserver_remember" />

</LinearLayout>
