<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 * This file incorporates work covered by the following license notice:
 *
 *   Licensed to the Apache Software Foundation (ASF) under one or more
 *   contributor license agreements. See the NOTICE file distributed
 *   with this work for additional information regarding copyright
 *   ownership. The ASF licenses this file to you under the Apache
 *   License, Version 2.0 (the "License"); you may not use this file
 *   except in compliance with the License. You may obtain a copy of
 *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
-->
<menu xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_computer"
        android:title="@string/menu_add_computer"
        android:icon="@drawable/ic_action_add_computer"
        compat:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        compat:showAsAction="never"/>

    <item
        android:id="@+id/menu_requirements"
        android:title="@string/menu_requirements"
        compat:showAsAction="never"/>

    <item
        android:id="@+id/menu_licenses"
        android:title="@string/menu_licenses"
        compat:showAsAction="never"/>

</menu>