<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 * This file incorporates work covered by the following license notice:
 *
 *   Licensed to the Apache Software Foundation (ASF) under one or more
 *   contributor license agreements. See the NOTICE file distributed
 *   with this work for additional information regarding copyright
 *   ownership. The ASF licenses this file to you under the Apache
 *   License, Version 2.0 (the "License"); you may not use this file
 *   except in compliance with the License. You may obtain a copy of
 *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
-->
<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/view_animator"
              android:inAnimation="@android:anim/fade_in"
              android:outAnimation="@android:anim/fade_out"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layout_pin_validation"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_horizontal_connection_layout"
        android:paddingRight="@dimen/padding_horizontal_connection_layout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/message_impress_pin_validation"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/text_pin"
            android:textSize="@dimen/text_size_pin"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_vertical_pin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_error_message"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_horizontal_connection_layout"
        android:paddingRight="@dimen/padding_horizontal_connection_layout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_error_title"
            android:text="@string/message_connection_failed_title"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_error_title"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/text_primary_error_message"
            android:text="@string/message_impress_remote_enabling"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_vertical_error_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/text_secondary_error_message"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_vertical_error_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

     </LinearLayout>

</ViewAnimator>